# data-mining-final-exam

./: .gitignore  README.md  data.csv  mise.toml  pyproject.toml
src/: bonus_01.py  bonus_02.py  bonus_03.py  q02_descriptive_stats.py  q03_correlation.py  q04_attrition_frequency.py  q05_decision_tree.py  q06_model_evaluation.py  q07_feature_importance.py  q08_pruning.py  q09_decision_path.py  q10_standardization.py  q11_clustering.py  q12_linkage_comparison.py  q13_cluster_profiling.py  q14_cluster_attrition.py  q15_ols_regression.py  q16_vif.py  q17_ridge.py  q18_lasso.py  q19_elastic_net.py  q20_regression_comparison.py  q21_high_risk_analysis.py  q22_contradiction_analysis.py  q23_chro_recommendation.py  question_01.py  question_02.py  question_03.py  question_04.py  question_05.py  question_06.py  question_07.py  question_08.py  question_09.py  question_10.py  question_11.py  question_12.py  question_13.py  question_14.py  question_15.py  (+8 more)
