[project]
name = "final-exam"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "matplotlib>=3.10.9",
  "numpy>=2.4.4",
  "pandas>=3.0.3",
  "pydantic>=2.13.4",
  "rich>=15.0.0",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.6",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["D10", "E501", "PLR2004", "TC002"]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FAST",
  "FBT",
  "FIX",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
